; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_bplist.c_bplist_clear.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_bplist.c_bplist_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@bplist_iterate_last_removed = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bplist_clear(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = call i32 @mutex_enter(i32* %5)
  br label %7

7:                                                ; preds = %12, %1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = call i32* @list_head(i32* %9)
  store i32* %10, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %7
  %13 = load i32*, i32** %3, align 8
  store i32* %13, i32** @bplist_iterate_last_removed, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @list_remove(i32* %15, i32* %16)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @kmem_free(i32* %18, i32 4)
  br label %7

20:                                               ; preds = %7
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = call i32 @mutex_exit(i32* %22)
  ret void
}

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local i32* @list_head(i32*) #1

declare dso_local i32 @list_remove(i32*, i32*) #1

declare dso_local i32 @kmem_free(i32*, i32) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
